[package]
name = "rustyHPSDR"
version = "0.1.1"
edition = "2024"
description = "An SDR Radio application for HPSDR radios"
authors = ["John Melton G0ORX <john.d.melton@googlemail.com>"]

[dependencies]
gtk = { version = "0.9", package =  "gtk4", features = ["v4_12"] }
gdk-pixbuf = "0.20"
cairo-rs = "0.20"
pango = "0.20"
pangocairo = "0.20"
glib = "0.20"
tokio = { version = "1", features = ["full"] }
network-interface = "2.0.0"
rustfft = "6.1"
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.10"
dirs = "6.0"
anyhow = "1.0"
cpal = "0.16"
ringbuf = "0.4.8"
midir = "0.10.3"
socket2 = "0.5"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[package.metadata.deb]
maintainer = "John Melton G0ORX <john.d.melton@googlemail.com>"
copyright = "2025, John Melton G0ORX <john.d.melton@googlemail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple subcommand for the Cargo package manager for \
building Debian packages from Rust projects."""
depends = ["$auto", "libfftw3-dev"]
section = "utility"
priority = "optional"
assets = [
    ["target/release/rustyHPSDR", "/usr/local/bin/", "755"],
    ["assets/rustyHPSDR.desktop", "/usr/share/applications/", "644"],
    ["assets/rustyHPSDR.png", "/usr/share/pixmaps/rustyHPSDR.png", "644"],
    { source = "README.md", dest = "usr/share/doc/rustyHPSDR/README", mode = "644"},
]
